# marinade-sdk

./: Anchor.toml
.github/workflows/: lint-build-test.yml
libs/anchor-adapter/: Cargo.toml
libs/anchor-adapter/src/: lib.rs
libs/marinade-anchor-sdk/: Cargo.toml
libs/marinade-anchor-sdk/src/: lib.rs
libs/marinade-sdk/: Cargo.toml
libs/marinade-sdk-macro/: Cargo.toml
libs/marinade-sdk/src/: checks.rs
libs/marinade-sdk/src/state/: liq_pool.rs  marinade.rs  stake_system.rs  validator_system.rs
libs/micro-anchor/: Cargo.toml
programs/example/: Cargo.toml
