[package]
name = "anchor-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
derive_more = "0.99.17"
micro-anchor = {path = "../micro-anchor"}
