[package]
name = "marinade-sdk-macro"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.99", features=["full","fold"]}
syn-unnamed-struct = "0.1.0"
quote = "1.0.21"
proc-macro2 = "1.0.43"

[dev-dependencies]
micro-anchor = { path = "../../libs/micro-anchor" }
solana-program = "~1.16"
borsh = "0.10.3"
is_trait = "0.1.4"
