[package]
name = "marinade-sdk"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "marinade_sdk"

[features]

[profile.release]
overflow-checks = true

[dependencies]
borsh = "0.10.3"
derive_more = "0.99.17"
micro-anchor = { path = "../../libs/micro-anchor" }
marinade-sdk-macro = { path = "../../libs/marinade-sdk-macro" }
solana-program = "~1.16"
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
